# Mills-Museum

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEX.md  DATA_VISUAL.md  Dockerfile  MCAM.ipynb  README.md  doc.md  main.ipynb  package.json  pyproject.toml  requirements.txt
.github/workflows/: filtration-tests.yml
.rightnow/benchmarking/: sessions.json
AAT_terms/: aat_database.db
colab/: embed_aat_keywords.ipynb  mcam_server.ipynb
docs/: frontend-architecture.md  mcam-keyword-generator-user-guide.md  technical-handover.md
documentation/: DATA_VISUAL.md  doc.md  findings.md  image-pipeline-dependencies.md  model-choice.md
frontend/: CHANGELOG.md
huggingface_upload_scripts/: aat_to_hf.py
scripts/filtration_test/: test_semantic_dedup_core.py
scripts/hf_upload_scripts/: aat_categories_to_hf.py  aat_museum_filtered_to_hf.py  aat_to_hf.py  data_to_hf.py  vdb_to_hf.py
scripts/pipeline/filtration/: aat_to_hf.py  data_to_hf.py  (+2 more)
spaces/: app.py  requirements.txt
src/analysis/: 01_deep_profile.py  02_term_analysis.py  03_hierarchy_analysis.py  04_visualizations.py  05_interactive_viz.py  06_advanced_analysis.py  07_network_and_extras.py  08_fixes.py  09_dashboard.py  PROGRESS.md  README.md  doc.md  load_dataset.py
src/frontend/: Mill Art Museum Figma prototype.fig  UpdatedFigmaPrototype  data_story_exhibit.py  doc.md  frontend_api.ipynb  gradio.py  keyword_feedback.py  mcam_with_api.ipynb
src/hf_upload_scripts/: aat_categories_to_hf.py
tests/filtration_test/: test_semantic_dedup_core.py
tests/frontend_test/: test_keyword_feedback.py
(+45 files in other folders)
